--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,8 +6,8 @@ stages:
 deploy:
   stage: deploy
   variables:
-    TWINE_USERNAME: $PYPI_IVORY_USERNAME
-    TWINE_PASSWORD: $PYPI_IVORY_PASSWORD
+    TWINE_USERNAME: $PYPI_USERNAME_IVORY
+    TWINE_PASSWORD: $PYPI_PASSWORD_IVORY
   image: python:3.10-slim
   before_script:
     - pip install build twine
